--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,14 @@ on:
       - master
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run tests
+        run: npm test
+
   build:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       # 1) Checkout - stáhne kód do CI prostředí
@@ -24,7 +31,6 @@ jobs:
       # 4) Build projektu
       - name: Build
         run: npm run build
-
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -34,7 +40,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
-          
+
   deploy:
     permissions:
       contents: read
