--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,12 +6,6 @@ on:
       - master
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Run tests
-        run: npm run test
-
   build:
     needs: test
     runs-on: ubuntu-latest
@@ -27,6 +21,10 @@ jobs:
       # 3) Instalace závislostí
       - name: Install dependencies
         run: npm install
+      
+      # 3) Přidáme testy
+      - name: Run tests
+        run: npm run test
 
       # 4) Build projektu
       - name: Build
